# ParallelProgrammingLab

./: .gitignore  README.md
groupby/: random_string_2.cpp
groupby/mpi/: main.cpp
groupby/mpi_omp/: main.cpp
groupby/omp/: CMakeLists.txt
groupby/sequential/: CMakeLists.txt  main.cpp
lab1/: CMakeLists.txt  main.cpp  mat_vect_mult.cpp  mtx_vec_mul.cpp  odd_even.cpp  odd_even_sort.cpp  trap.cpp  trip.cpp
lab2/: CMakeLists.txt  define.h  main.cpp  mtx_vec_mul.cpp  odd_even_sort.cpp  trap.cpp
lab3/: CMakeLists.txt  main.cpp
lab4/: CMakeLists.txt  main.cpp
pdc/: CMakeLists.txt  data_generator.cpp  data_partition.c  exec.sh  psrs_sort.cpp
pdc_lab1/: InvertedIndexBuilder.java  ZipDecompressor.java  configure_hadoop_on_wsl1.md  crawler.py  hadoop_wsl_搭建.md  postprocess.py  preprocess.py  server.js
pdc_lab1/etc_hadoop/: core-site.xml  hadoop-env.sh  hdfs-site.xml  mapred-site.xml  yarn-env.sh  yarn-site.xml
pdc_lab2/: CMakeLists.txt  data_generator.cpp  data_partition.cpp  exec.sh  predefined.h  psrs_sort.cpp
project/: random_string_2.cpp
project/mpi/: CMakeLists.txt  main.cpp
project/mpi_omp/: CMakeLists.txt
project/omp/: main.cpp  random_string.cpp
project/sequential/: main.cpp
